--- a/src/classes/SequenceEngine.cls
+++ b/src/classes/SequenceEngine.cls
@@ -7,22 +7,27 @@ public class SequenceEngine {
 		
 		//Created a factory map using all participant types.
 		Map<String, Type> sequenceEngineFactory = new Map<String, Type> {CadenceConstants.CONTACT_OBJECT_NAME => ContactService.class, CadenceConstants.LEAD_OBJECT_NAME => LeadService.class };
-			
+		
 		//Initiation of service class	
 		IParticipant participantService = (IParticipant)sequenceEngineFactory.get(participantType).newInstance();
 		 
 		//Fetch all the Active sequences 
 		Map<Id, Cadence__c> activeSequenceIdToSequenceMap  = SequenceEngineHelper.getActiveSequenceIdToSequenceMap(new List<String> {participantType}); 
-		
+		for(SObject obj : participantList)
+				{
+					System.Debug('perform1'  + obj.get(CadenceConstants.NAMESPACE + 'Cadence_Id__c'));
+				}
 		//Fetch participant list which have exit criteria matched in sequence(further those participant will be unassociated.)
 		List<SObject> participantListWithMatchedCriteria = participantService.checkExitCriteria(participantType, participantList, activeSequenceIdToSequenceMap); 
-			
+		for(SObject obj : participantList)
+				{
+					System.Debug('perform2'  + obj.get(CadenceConstants.NAMESPACE + 'Cadence_Id__c'));
+				}
 		List<SObject> unAssociatedParticipantList = new List<SObject>();
 			
 		If(participantListWithMatchedCriteria != null && participantListWithMatchedCriteria.size() > 0)	
 		{ 
-			unAssociatedParticipantList = participantService.unAssociateParticipants(participantListWithMatchedCriteria, participantType); 
-					
+			unAssociatedParticipantList = participantService.unAssociateParticipants(participantListWithMatchedCriteria, participantType);					
 			SequenceEngineHelper.deleteUnPerformedParticipantActions(unAssociatedParticipantList);
 		}
 		
@@ -33,7 +38,7 @@ public class SequenceEngine {
 			 Map<Id, Set<Id>> participantIdToSequenceIdHistorySetMap = participantService.getSequenceHistory(); 			 
 			 Map<Id, List<SObject>> sequenceIdToParticipantListMap =  participantService.checkEntryCriteria(participantList, activeSequenceIdToSequenceMap, participantIdToSequenceIdHistorySetMap);
 			 
-			 participantListToCreateParticipantActions = participantService.associateParticipant(sequenceIdToParticipantListMap, participantIdToSequenceIdHistorySetMap);
+			 participantListToCreateParticipantActions = participantService.associateParticipant(sequenceIdToParticipantListMap);
 			 participantListToPerformParticipantAction = participantList; 	 		  			 
 		}
 		else {
