--- a/src/classes/SequenceEngineService.cls
+++ b/src/classes/SequenceEngineService.cls
@@ -39,7 +39,7 @@ public class SequenceEngineService {
     * @param:  (1) sequenceId - Id - Id of sequence for which we have to associate participants
     * @return: 
     **/
-	private static void associateParticipantsToSequence(Id sequenceId) {
+	public static void associateParticipantsToSequence(Id sequenceId) {
 		Map<Id, Cadence__c> sequenceIdToSequenceMap = SequenceEngineHelper.getActiveSequenceIdToSequenceMapByFieldValue(new Map<String, Set<String>>{'Id' => new Set<String>{sequenceId}});
 		
 		if(!sequenceIdToSequenceMap.containsKey(sequenceId)) {
@@ -73,9 +73,11 @@ public class SequenceEngineService {
 		}
 		
 		// If limited records are there to update then directly update them, else run batch to process to all records to associate them 
-		if(participantListToUpdate !=  null && participantListToUpdate.size() > 0 && participantListToUpdate.size() < 9000) {
+		if(participantListToUpdate !=  null && participantListToUpdate.size() > 0 && participantListToUpdate.size() < SequenceEngineHelper.getAvailableDMLRowsLimit()) {
+			disableParticipantTrigger(sequenceRecordType);
 			Database.SaveResult[] saveResults = Database.update(participantListToUpdate, false);
-		} else if(participantListToUpdate !=  null && participantListToUpdate.size() > 0 && participantListToUpdate.size() >= 9000) {
+			enableParticipantTrigger();
+		} else if(participantListToUpdate !=  null && participantListToUpdate.size() > 0 && participantListToUpdate.size() >= SequenceEngineHelper.getAvailableDMLRowsLimit()) {
 			AssociateParticipantsBatch associateParticipantsBatch = new AssociateParticipantsBatch(sequenceId); 
 			Database.executeBatch(associateParticipantsBatch, 200);
 		}
@@ -87,7 +89,7 @@ public class SequenceEngineService {
     * @param:  (1) sequenceIdList - List<Id> - Ids of sequences for which we have to associate participants
     * @return: 
     **/
-    private static void associateParticipantsToSequences(List<Id> sequenceIdList) {
+    public static void associateParticipantsToSequences(List<Id> sequenceIdList) {
     	// to do - Handling for multiple sequences	
 	}
 	
@@ -123,8 +125,20 @@ public class SequenceEngineService {
 		return removeBraces(query);
 	}
 	
+	// to do - can move to util
+	public Static void disableParticipantTrigger(String sequenceRecordType) {
+		Contacts.fireTrigger = (sequenceRecordType == CadenceConstants.CONTACT_OBJECT_NAME) ? false : true;
+		Leads.fireTrigger = (sequenceRecordType == CadenceConstants.LEAD_OBJECT_NAME) ? false : true;
+	}
+	
+	// to do - can move to util
+	public Static void enableParticipantTrigger() {
+		Contacts.fireTrigger = true;
+		Leads.fireTrigger = true;
+	}
+	
 	// to do - move to util
-	private Static string removeBraces(string query){
+	private Static string removeBraces(string query) {
         Integer open,close ;
         open = query.countMatches('(');
         close = query.countMatches(')');
