--- a/src/classes/SequenceEngineTest.cls
+++ b/src/classes/SequenceEngineTest.cls
@@ -1,55 +1,125 @@
 @isTest
 public class SequenceEngineTest {
 	
-	static testMethod void processSequencesForContactTest() {
-		Account accountRec = TestDataFactory.createAccount();
-		insert accountRec;
-		Action__c actionRec = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
-		insert actionRec;
+	public static String cadJsonobj;
+	public static CadenceAction__c cadenceActionobj;
+	public static final String CUSTOM_LOGIC = '1 OR (2 AND 3)';
+	public static Action__c action1;
+	public static Action__c action2;
+	public static Action__c action3;
+	
+	static testMethod void processSequencesForLeadTest() {
 		List<SObject> participantList = new List<SObject>();
-		Cadence__c seqRec = TestDataFactory.createCadence(CadenceConstants.CONTACT_OBJECT_NAME);
-		insert seqRec;
-		CadenceAction__C seqActionRec = TestDataFactory.createCadenceAction(seqRec.Id, actionRec.Id);
+		List<Criterion> criterionList = new List<Criterion>();
+		List<Criterion> exitCriterionList = new List<Criterion>();
+		
+		Cadence__c cadenceobj = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
+		criterionList.add(TestDataFactory.createCriterion(1, 'FirstName', 'STRING', 'equals', 'Test#11'));
+		criterionList.add(TestDataFactory.createCriterion(2, 'LeadSource', 'PICKLIST', 'equals', 'Web'));
+		criterionList.add(TestDataFactory.createCriterion(3, 'Title', 'STRING', 'contains', 'Test'));
+		
+		exitCriterionList.add(TestDataFactory.createCriterion(1, 'FirstName', 'STRING', 'equals', 'Exit'));
+		exitCriterionList.add(TestDataFactory.createCriterion(2, 'LastName', 'STRING', 'equals', 'Lead'));
+		String exitCriterion = TestDataFactory.createCadenceJSON(exitCriterionList, CadenceConstants.CONDITION_AND, ''); 
+
+		cadJsonobj = TestDataFactory.createCadenceJSON(criterionList, CadenceConstants.CONDITION_AND, '');
+		cadenceobj.Entrance_Criteria__c= cadJsonobj;
+		cadenceobj.Exit_Criteria__c=exitCriterion;
+		cadenceobj.Exit_Criteria_PE__c = RuleCriterionMatcher.getPostFixExpression(CUSTOM_LOGIC);
+		cadenceobj.matching_priority__c='P1';
+		cadenceobj.Participent_Activation__c='Automatic';
+		insert cadenceobj;
+
+		action1= TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_EMAIL);
+		action2= TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
+		action3= TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
+		System.runAs ( new User(Id = UserInfo.getUserId()) ) {
+			EmailTemplate validEmailTemplate = new EmailTemplate();
+			validEmailTemplate.isActive = true;
+			validEmailTemplate.Name = 'name';
+			validEmailTemplate.DeveloperName = 'unique_name';
+			validEmailTemplate.TemplateType = 'text';
+			validEmailTemplate.Body='Test Body for {!Lead.Name}';
+			validEmailTemplate.Subject='New {!Lead.Name}';
+			validEmailTemplate.FolderId = UserInfo.getUserId();
+			insert validEmailTemplate;
+			EmailTemplate template = validEmailTemplate;
+			action1.Template_Id__c= validEmailTemplate.id;
+		}
+		action1.Activation_Type__c='Manual';
+		action1.Email_Type__c='NATIVE';
+		insert action1;
+		action2.Activation_Type__c = 'Automatic';
+		insert action2;
+		insert action3; 
+
+		CadenceAction__C seqActionRec=TestDataFactory.createCadenceAction(cadenceobj.Id, action1.Id);
+		seqActionRec.Day__c= 2;
+		seqActionRec.Hour__c=2;
+		seqActionRec.Trigger_Type__c = 'Time Based';
 		insert seqActionRec;
-		Contact contRec = TestDataFactory.createContact(accountRec.Id, seqRec.Id);
-		insert contRec; 
-		participantList.add(contRec);
+		
+		
+
+		Lead leadRec = TestDataFactory.createLead(cadenceobj.Id);
+		leadRec.Email = 'test@gmail.com';
+		insert leadRec;
+		Sequence_Action__c participantAction = TestDataFactory.createParticipantAction(leadRec.Id, seqActionRec.Id, CadenceConstants.LEAD_OBJECT_NAME);
+		insert participantAction;
+		participantList.add(leadRec);
+
 		Test.startTest();
-		SequenceEngine.processSequences(CadenceConstants.CONTACT_OBJECT_NAME,participantList,false);
+		SequenceEngine.processSequences(CadenceConstants.LEAD_OBJECT_NAME,participantList,null,true);
 		Test.stopTest();
 	}
 	
-	static testMethod void processSequencesForLeadTest() {
-		Action__c actionRec = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
-		List<Sequence_Action__c> seqActRec = new List<Sequence_Action__c>();
-		insert actionRec;
+	static testMethod void processSequencesForLeadByTriggerTest() {
 		List<SObject> participantList = new List<SObject>();
-		Cadence__c seqRec = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
-		insert seqRec;
-		CadenceAction__C seqActionRec = TestDataFactory.createCadenceAction(seqRec.Id, actionRec.Id);
+		List<Criterion> criterionList = new List<Criterion>();
+		List<Criterion> exitCriterionList = new List<Criterion>();
+		
+		Cadence__c cadenceobj = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
+		criterionList.add(TestDataFactory.createCriterion(1, 'FirstName', 'STRING', 'equals', 'Test#11'));
+		criterionList.add(TestDataFactory.createCriterion(2, 'LeadSource', 'PICKLIST', 'equals', 'Web'));
+		criterionList.add(TestDataFactory.createCriterion(3, 'Title', 'STRING', 'contains', 'Test'));
+		
+		exitCriterionList.add(TestDataFactory.createCriterion(1, 'FirstName', 'STRING', 'equals', 'Exit'));
+		exitCriterionList.add(TestDataFactory.createCriterion(2, 'LastName', 'STRING', 'equals', 'Lead'));
+		String exitCriterion = TestDataFactory.createCadenceJSON(exitCriterionList, CadenceConstants.CONDITION_AND, ''); 
+
+		cadJsonobj = TestDataFactory.createCadenceJSON(criterionList, CadenceConstants.CONDITION_AND, '');
+		cadenceobj.Entrance_Criteria__c= cadJsonobj;
+		cadenceobj.Exit_Criteria__c=exitCriterion;
+		cadenceobj.Exit_Criteria_PE__c = RuleCriterionMatcher.getPostFixExpression(CUSTOM_LOGIC);
+		cadenceobj.matching_priority__c='P1';
+		cadenceobj.Participent_Activation__c='Automatic';
+		insert cadenceobj;
+
+		action1= TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_EMAIL);
+		action2= TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
+		action3= TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
+		insert action1;
+		action2.Activation_Type__c = 'Automatic';
+		insert action2;
+		insert action3; 
+		
+		CadenceAction__C seqActionRec=TestDataFactory.createCadenceAction(cadenceobj.Id, action1.Id);
+		seqActionRec.Day__c= 2;
+		seqActionRec.Hour__c=2;
+		seqActionRec.Trigger_Type__c = 'Time Based';
 		insert seqActionRec;
-		Lead leadRec = TestDataFactory.createLead(seqRec.Id);
-		insert leadRec; 
+		
+		Id cuId = UserInfo.getUserID();
+
+		Lead leadRec = TestDataFactory.createLead(cadenceobj.Id);
+		leadRec.Email = 'test@gmail.com';
+		insert leadRec;
+		Sequence_Action__c participantAction = TestDataFactory.createParticipantAction(leadRec.Id, seqActionRec.Id, CadenceConstants.LEAD_OBJECT_NAME);
+		insert participantAction;
 		participantList.add(leadRec);
-		
-		Action__c actionRec1 = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_EMAIL);
-		insert actionRec1;
-		Cadence__c seqRec1 = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
-		seqRec1.Name = 'Cadence New 1';
-		seqRec1.Status__c = false;
-		insert seqRec1;
-		CadenceAction__C seqActionRec1 = TestDataFactory.createCadenceAction(seqRec1.Id, actionRec1.Id);
-		insert seqActionRec1;
-		Lead leadRec1 = TestDataFactory.createLead(seqRec1.Id);
-		leadRec1.LastName = 'Lead New 1';
-		leadRec1.Company = 'Company New 1';
-		insert leadRec1; 
-		Sequence_Action__c participantAction1 = TestDataFactory.createParticipantAction(leadRec1.Id, seqActionRec1.Id, CadenceConstants.LEAD_OBJECT_NAME);
-		insert participantAction1;
-		participantList.add(leadRec1);
-		
+
 		Test.startTest();
-		SequenceEngine.processSequences(CadenceConstants.LEAD_OBJECT_NAME,participantList,true);
+		SequenceEngine.processSequences(CadenceConstants.LEAD_OBJECT_NAME,participantList,null,true);
 		Test.stopTest();
-	}   
+	}
 }
